--- a/Engine/ColorVision.Engine/Services/PhyCameras/CreateWindow.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/CreateWindow.xaml
@@ -26,13 +26,9 @@
             </StackPanel>
         </Border>
         <ScrollViewer Grid.Row="1" Margin="0,5,0,5">
-            <StackPanel  Margin="0,5" >
+            <StackPanel  x:Name="StackPanelInfo" Margin="0,5" >
                 <GroupBox Header="配置信息" Margin="0,5">
                     <StackPanel Margin="5">
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="相机类型" Width="120"/>
-                            <hc:ComboBox x:Name="ComboxCameraType"  SelectedValue="{Binding CreateConfig.CameraType}" SelectedValuePath="Key"  DisplayMemberPath="Value" />
-                        </DockPanel>
                         <DockPanel Margin="0,2">
                             <TextBlock Text="相机型号" Width="120"/>
                             <hc:ComboBox x:Name="ComboxCameraModel"  SelectedValue="{Binding CreateConfig.CameraModel}" SelectedValuePath="Key"  DisplayMemberPath="Value" />
@@ -55,102 +51,6 @@
                         </DockPanel>
                     </StackPanel>
                 </GroupBox>
-
-
-                <GroupBox Header="相机配置" Margin="0,5">
-                    <StackPanel Margin="5">
-                        <GroupBox Header="OB区域" Margin="0,2">
-                            <UniformGrid Rows="2" Columns="2" Margin="5">
-                                <DockPanel Margin="5,2,10,2" >
-                                    <TextBlock Text="左:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.Ob}"/>
-                                </DockPanel>
-                                <DockPanel Margin="10,2,5,2" >
-                                    <TextBlock Text="上:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.ObT}"/>
-                                </DockPanel>
-                                <DockPanel Margin="5,2,10,2" >
-                                    <TextBlock Text="右:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.ObR}"/>
-                                </DockPanel>
-                                <DockPanel Margin="10,2,5,2" >
-                                    <TextBlock Text="下:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.ObB}"/>
-                                </DockPanel>
-                            </UniformGrid>
-                        </GroupBox>
-
-                        <GroupBox Header="ROI区域" Margin="0,2">
-                            <UniformGrid Rows="2" Columns="2" Margin="5">
-                                <DockPanel Margin="5,2,10,2" >
-                                    <TextBlock Text="PointX:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.PointX}"/>
-                                </DockPanel>
-                                <DockPanel Margin="10,2,5,2" >
-                                    <TextBlock Text="PointY:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.PointY}"/>
-                                </DockPanel>
-                                <DockPanel Margin="5,2,10,2" >
-                                    <TextBlock Text="Width:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.Width}"/>
-                                </DockPanel>
-                                <DockPanel Margin="10,2,5,2" >
-                                    <TextBlock Text="Height:" Width="60"/>
-                                    <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.Height}"/>
-                                </DockPanel>
-                            </UniformGrid>
-                        </GroupBox>
-
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="温控:" Width="120"/>
-                            <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.TempCtlChecked}"/>
-                        </DockPanel>
-                        <DockPanel Visibility="{Binding CreateConfig.CameraCfg.TempCtlChecked,Converter={StaticResource bool2VisibilityConverter}}">
-                            <TextBlock Text="目标温度:" Width="120"/>
-                            <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.TargetTemp}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="传输速率:" Width="120"/>
-                            <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.UsbTraffic}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="偏移:" Width="120"/>
-                            <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.Offset}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="增益:" Width="120"/>
-                            <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.Gain}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="定时查询:" Width="120"/>
-                            <TextBox Style="{StaticResource TextBox.Small}" Text="{Binding CreateConfig.CameraCfg.TempSpanTime}"/>
-                        </DockPanel>
-                    </StackPanel>
-                </GroupBox>
-
-                <GroupBox Header="电机" Margin="0,5" >
-                    <StackPanel Margin="5">
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="启用:" Width="120"/>
-                            <ui:ToggleSwitch IsChecked="{Binding CreateConfig.MotorConfig.IsUseMotor}"/>
-                        </DockPanel>
-                        <StackPanel Visibility="{Binding CreateConfig.MotorConfig.IsUseMotor,Converter={StaticResource bool2VisibilityConverter}}">
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="电机类型:" Width="120"/>
-                                <ComboBox x:Name="ComboxMotorType"  SelectedValue="{Binding CreateConfig.MotorConfig.eFOCUSCOMMUN}"  SelectedValuePath="Key"  DisplayMemberPath="Value"  Margin="0,0,0,0"/>
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="串口:" Width="120"/>
-                                <hc:ComboBox  x:Name="TextSerial" IsEditable="True" Text="{Binding CreateConfig.MotorConfig.SzComName}"  hc:InfoElement.ShowClearButton="True" Margin="0,0,10,0"  />
-                            </DockPanel>
-                            <DockPanel Margin="0,2">
-                                <TextBlock Text="波特率:" Width="120"/>
-                                <hc:ComboBox x:Name="TextBaudRate" IsEditable="True" Text="{Binding CreateConfig.MotorConfig.BaudRate}"  hc:InfoElement.ShowClearButton="True" Margin="0,0,10,0"  />
-                            </DockPanel>
-                        </StackPanel>
-                    </StackPanel>
-                </GroupBox>
-
                 <GroupBox Header="滤色轮" Margin="0,5" >
                     <StackPanel Margin="5">
                         <DockPanel Margin="0,2">
@@ -235,25 +135,6 @@
                         </StackPanel>
 
 
-                    </StackPanel>
-                </GroupBox>
-
-
-                <GroupBox Header="数据文件服务配置" Margin="0,5">
-                    <StackPanel Margin="5">
-                        <DockPanel Margin="0,2">
-                            <Button Content=".." DockPanel.Dock="Right" VerticalAlignment="Bottom" Height="30" Width="30" Click="FileBasePath_Click"/>
-                            <TextBlock Text="数据目录:" Width="120"/>
-                            <TextBox Text="{Binding  CreateConfig.FileServerCfg.FileBasePath}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="端口地址:" Width="120"/>
-                            <TextBox Text="{Binding CreateConfig.FileServerCfg.Endpoint}"/>
-                        </DockPanel>
-                        <DockPanel Margin="0,2">
-                            <TextBlock Text="端口范围:" Width="120"/>
-                            <TextBox Text="{Binding CreateConfig.FileServerCfg.PortRange}" />
-                        </DockPanel>
                     </StackPanel>
                 </GroupBox>
             </StackPanel>
