--- a/ColorVision/Plugins/PluginManagerWindow.xaml
+++ b/ColorVision/Plugins/PluginManagerWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Plugins"
+        xmlns:properties="clr-namespace:ColorVision.Properties"
         d:DataContext="{d:DesignInstance local:PluginManager}"
         mc:Ignorable="d"
-        Title="PluginManagerWindow" Background="{DynamicResource GlobalBackground}" Height="450" Width="800" Initialized="Window_Initialized">
+        Title="{x:Static properties:Resources.PluginManagerWindow}" Background="{DynamicResource GlobalBackground}" Height="450" Width="800" Initialized="Window_Initialized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
