--- a/ColorVision/Projects/ProjectManagerWindow.xaml
+++ b/ColorVision/Projects/ProjectManagerWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorVision.Projects"
         d:DataContext="{d:DesignInstance local:ProjectManager}"
+        xmlns:properties="clr-namespace:ColorVision.Properties"
         mc:Ignorable="d"
-        Title="ProjectManagerWindow" Height="450" Width="900" Background="{StaticResource GlobalBackground}" Initialized="Window_Initialized">
+        Title="{x:Static properties:Resources.ProjectManagerWindow}" Height="450" Width="900" Background="{StaticResource GlobalBackground}" Initialized="Window_Initialized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
