--- a/ColorVision/Projects/ProjectManagerWindow.xaml
+++ b/ColorVision/Projects/ProjectManagerWindow.xaml
@@ -33,28 +33,28 @@
                 </ListView.ItemContainerStyle>
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="名称">
+                        <GridViewColumn Header="{x:Static properties:Resources.ProjectName}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:ProjectInfo}">
                                     <TextBlock Text="{Binding Project.Header,Mode=OneWay}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="Version">
+                        <GridViewColumn Header="{x:Static properties:Resources.Version}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:ProjectInfo}">
                                     <TextBlock Text="{Binding AssemblyVersion}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="Date">
+                        <GridViewColumn Header="{x:Static properties:Resources.BuildDate}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:ProjectInfo}">
                                     <TextBlock Text="{Binding AssemblyBuildDate,StringFormat=yyyy/MM/dd}"/>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="命令">
+                        <GridViewColumn Header="{x:Static properties:Resources.Command}">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:ProjectInfo}">
                                     <StackPanel Orientation="Horizontal">
