--- a/Engine/ColorVision.Engine/DataHistory/HomePage.xaml
+++ b/Engine/ColorVision.Engine/DataHistory/HomePage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="ColorVision.Solution.Searches.HomePage"
+﻿<Page x:Class="ColorVision.Engine.DataHistory.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ColorVision.Solution.Searches"
+      xmlns:local="clr-namespace:ColorVision.Engine.DataHistory"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="HomePage" Loaded="Page_Loaded" Initialized="Page_Initialized">
@@ -20,8 +20,8 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <Image Source="/ColorVision.Solution;component/Assets/Image/background0.png"/>
-                    <Image Source="/ColorVision.Solution;component/Assets/Image/综合查询.png" Margin="30"/>
+                    <Image Source="/ColorVision.Engine;component/Assets/Image/background0.png"/>
+                    <Image Source="/ColorVision.Engine;component/Assets/Image/综合查询.png" Margin="30"/>
                     <TextBlock Grid.Row="1" Text="综合查询" HorizontalAlignment="Center" FontSize="18"/>
                 </Grid>
             </UserControl>
@@ -31,8 +31,8 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <Image Source="/ColorVision.Solution;component/Assets/Image/background0.png"/>
-                    <Image Source="/ColorVision.Solution;component/Assets/Image/归档查询.png" Margin="50"/>
+                    <Image Source="/ColorVision.Engine;component/Assets/Image/background0.png"/>
+                    <Image Source="/ColorVision.Engine;component/Assets/Image/归档查询.png" Margin="50"/>
                     <TextBlock Grid.Row="1" Text="归档查询" HorizontalAlignment="Center" FontSize="18"/>
                 </Grid>
             </UserControl>
