--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -96,7 +96,7 @@
                     </ToolBar>
                 </ToolBarTray>
 
-                <Border x:Name="ToolBarBottom" d:DataContext="{d:DesignInstance draw:ImageEditViewMode}" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}" Padding="2" CornerRadius="5" Background="{DynamicResource SecondaryRegionBrush}"  HorizontalAlignment="Center" VerticalAlignment="Bottom"  Margin="0,0,0,10">
+                <Border x:Name="ToolBarBottom"  Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}" Padding="2" CornerRadius="5" Background="{DynamicResource SecondaryRegionBrush}"  HorizontalAlignment="Center" VerticalAlignment="Bottom"  Margin="0,0,0,10">
                     <Grid>
                         <StackPanel Orientation="Horizontal" >
                             <ToggleButton  IsChecked="{Binding Measure}" Padding="5" Margin="0,0,2,0" Visibility="{Binding ImageEditMode,Converter={StaticResource bool2VisibilityConverter}}">
