更新版本号和命令重命名，添加图标资源
更新 `Directory.Build.props`、`ColorVision.ImageEditor.csproj` 和 `ColorVision.Solution.csproj` 文件中的 `VersionPrefix`。
在 `TemplateEditorWindow.xaml` 中调整菜单项。
将 `OpenProperty` 命令重命名为 `PropertyCommand` 并更新相关文件。
在多个文件中将 `DICopy` 图标资源替换为 `DICopyFullPath`。
在 `Icons.xaml` 中添加 `DICopyFullPath` 图标资源。
调整 `Menu.xaml` 中 `Separator` 的 `Margin` 属性。

--- a/Engine/ColorVision.Engine/Templates/TemplateEditorWindow.xaml
+++ b/Engine/ColorVision.Engine/Templates/TemplateEditorWindow.xaml
@@ -61,8 +61,8 @@
                 <ListView.Resources>
                     <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened"/>
                     <ContextMenu x:Key="ContextMenuItem">
+                        <MenuItem Header="{x:Static properties:Resources.MenuDelete}" Command="ApplicationCommands.Delete" />
                         <MenuItem Header="{x:Static properties:Resources.MenuRename}"  Click="MenuItem_Click" Tag="{Binding .}" />
-                        <MenuItem Header="{x:Static properties:Resources.MenuDelete}"  Click="Button_Del_Click" Tag="{Binding .}"  />
                         <MenuItem Header="创建副本"  Click="Button_CreateCopy_Click" Tag="{Binding .}"  />
                     </ContextMenu>
                 </ListView.Resources>
