--- a/UI/ColorVision.Themes/Themes/Icons.xaml
+++ b/UI/ColorVision.Themes/Themes/Icons.xaml
@@ -227,6 +227,32 @@
             </DrawingGroup>
         </DrawingBrush.Drawing>
     </DrawingBrush>
+    <DrawingBrush x:Key="DIRotate" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,0V16H0V0Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey-10}" Geometry="F1M12.5,3.39V9.16l-2.04,1.18.11-.18-.39-.24L8.03,8.57,8,8.62l-1,1.6-.44.7-.27.43L2.5,9.16V3.39L7.5.5Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M15,8.5a4.771,4.771,0,0,0-2-3.717V3.39l-.25-.44L7.75.07h-.5l-5,2.88L2,3.39V4.783A4.771,4.771,0,0,0,0,8.5c0,1.9,1.33,3.65,3.5,4.65.165.077.326.143.5.21V12.29c-.174-.077-.338-.162-.5-.25A4.236,4.236,0,0,1,1,8.5,3.531,3.531,0,0,1,2,6.125V9.16l.25.43,3.78,2.18.26-.42.27-.43L3,8.87V4.25L7,6.56v3.66l1-1.6V6.56l4-2.31V8.87L10.18,9.92l.39.24-.11.18-.56.9,2.85-1.65L13,9.16V6.125A3.531,3.531,0,0,1,14,8.5a3.618,3.618,0,0,1-1.26,2.65,7.633,7.633,0,0,1-5.12,1.839L9.19,10.48l-.847-.531L6.265,13.267l.158.69L9.6,15.948l.531-.847L8.322,13.966A8.432,8.432,0,0,0,13.43,11.88,4.609,4.609,0,0,0,15,8.5ZM7.5,5.7l-4-2.31,4-2.31,4,2.31Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+    <DrawingBrush x:Key="DIZoom" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M0,0H16V16H0Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey-10}" Geometry="F1M11.5,6.5a5,5,0,1,1-5-5A5,5,0,0,1,11.5,6.5Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M1,6.5a5.5,5.5,0,0,0,9.017,4.224l5.129,5.13.708-.708-5.13-5.129A5.5,5.5,0,1,0,1,6.5Zm1,0A4.5,4.5,0,1,1,6.5,11,4.505,4.505,0,0,1,2,6.5Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
 
     <GeometryDrawing x:Key="GridSquare"
                  Brush="{DynamicResource GlobalTextBrush}"
