--- a/UI/ColorVision.Themes/Themes/Menu.xaml
+++ b/UI/ColorVision.Themes/Themes/Menu.xaml
@@ -7,7 +7,7 @@
     
     <Geometry x:Key="DownArrow">M 0,0 L 3.5,4 L 7,0 Z</Geometry>
     <Geometry x:Key="UpArrow">M 0,4 L 3.5,0 L 7,4 Z</Geometry>
-    <Geometry x:Key="RightArrow">M 0,0 L 4,3.5 L 0,7 Z</Geometry>
+    <Geometry x:Key="RightArrow">F1M4.293,2,5,1.293l6.354,6.353v.708L5,14.707,4.293,14l6-6Z</Geometry>
     <Geometry x:Key="Checkmark">F1M5,11L3,7 5,7 6,9 9,3 11,3 7,11 5,11z</Geometry>
     <Geometry x:Key="ListUpArrow16x16">M4.999,8L4.999,15 10.999,15 10.999,8 14.999,8 7.999,1 1,8z</Geometry>
 
@@ -88,7 +88,28 @@
                 </Border>
                 <ContentPresenter Grid.Column="2" ContentSource="Header" VerticalAlignment="Center" Margin="{TemplateBinding MenuItem.Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                 <TextBlock Grid.Column="4" VerticalAlignment="Center" Text="{TemplateBinding MenuItem.InputGestureText}" Margin="{TemplateBinding MenuItem.Padding}" Visibility="Collapsed"/>
-                <Path Grid.Column="4" x:Name="rightArrowPath" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,7,0" Fill="{TemplateBinding MenuItem.Foreground}" Data="{StaticResource RightArrow}"/>
+                <Viewbox Grid.Column="4" HorizontalAlignment="Right" Margin="0,0,7,0" Width="10 " Height="10" VerticalAlignment="Center" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:System="clr-namespace:System;assembly=mscorlib">
+                    <Rectangle Width="10 " Height="10">
+                        <Rectangle.Resources>
+                            <SolidColorBrush x:Key="canvas" Opacity="0" />
+                            <SolidColorBrush x:Key="light-defaultgrey" Color="{DynamicResource defaultgreyColor}" Opacity="1" />
+                        </Rectangle.Resources>
+                        <Rectangle.Fill>
+                            <DrawingBrush Stretch="None">
+                                <DrawingBrush.Drawing>
+                                    <DrawingGroup>
+                                        <DrawingGroup x:Name="canvas">
+                                            <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M0,0H16V16H0Z" />
+                                        </DrawingGroup>
+                                        <DrawingGroup x:Name="level_1">
+                                            <GeometryDrawing Brush="{DynamicResource light-defaultgrey}" Geometry="F1M4.293,2,5,1.293l6.354,6.353v.708L5,14.707,4.293,14l6-6Z" />
+                                        </DrawingGroup>
+                                    </DrawingGroup>
+                                </DrawingBrush.Drawing>
+                            </DrawingBrush>
+                        </Rectangle.Fill>
+                    </Rectangle>
+                </Viewbox>
             </Grid>
             <Popup x:Name="PART_Popup" AllowsTransparency="true" Placement="Right" VerticalOffset="-3" HorizontalOffset="-2" IsOpen="{Binding Path=IsSubmenuOpen,RelativeSource={RelativeSource TemplatedParent}}" Focusable="false" PopupAnimation="{DynamicResource {x:Static SystemParameters.MenuPopupAnimationKey}}">
                 <theme:SystemDropShadowChrome Name="Shdw"  Color="Transparent">
@@ -120,9 +141,6 @@
             <Trigger SourceName="PART_Popup" Property="Popup.HasDropShadow" Value="true">
                 <Setter TargetName="Shdw" Property="Margin" Value="0,0,0,0"/>
                 <Setter TargetName="Shdw" Property="Color" Value="Gray"/>
-            </Trigger>
-            <Trigger SourceName="PART_Popup" Property="Popup.IsOpen" Value="true">
-                <Setter TargetName="rightArrowPath"  Property="Fill" Value="{DynamicResource EnvironmentCommandBarMenuMouseOverSubmenuGlyph}"/>
             </Trigger>
             <Trigger Property="IsHighlighted" Value="true">
                 <Setter TargetName="Bg" Property="Background"  Value="{DynamicResource EnvironmentCommandBarMenuItemMouseOver}"/>
@@ -273,7 +291,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
                     <Border x:Name="Border"  Background="{TemplateBinding Background}"  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" CornerRadius="3" Opacity="{TemplateBinding Opacity}">
-                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" />
+                        <StackPanel IsItemsHost="True" KeyboardNavigation.DirectionalNavigation="Cycle" Margin="1,2"/>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="HasDropShadow" Value="true">
