--- a/UI/ColorVision.Themes/Themes/Menu.xaml
+++ b/UI/ColorVision.Themes/Themes/Menu.xaml
@@ -15,8 +15,8 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Separator}">
-                    <Grid SnapsToDevicePixels="true" UseLayoutRounding="False" Margin="0 1 0 1">
-                        <Rectangle Height="1" Fill="{DynamicResource MenuItemSeparatorFillTop}"/>
+                    <Grid  Margin="4 1 4 1">
+                        <Rectangle Height="0.7" SnapsToDevicePixels="True" Fill="{DynamicResource MenuItemSeparatorFillTop}"/>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -42,7 +42,7 @@
                     <Path Name="Glyph" Width="16" Height="16" Fill="{DynamicResource EnvironmentCommandBarCheckBox}" FlowDirection="LeftToRight" StrokeThickness="1" Data="{StaticResource Checkmark}"/>
                 </Border>
                 <ContentPresenter Grid.Column="2"  ContentSource="Header" VerticalAlignment="Center" Margin="{TemplateBinding MenuItem.Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                <TextBlock Grid.Column="4" VerticalAlignment="Center" Text="{TemplateBinding MenuItem.InputGestureText}"  Margin="{TemplateBinding MenuItem.Padding}"/>
+                <TextBlock Grid.Column="4" VerticalAlignment="Center" TextAlignment="Right"  Text="{TemplateBinding MenuItem.InputGestureText}"  Margin="{TemplateBinding MenuItem.Padding}"/>
             </Grid>
         </Grid>
         <ControlTemplate.Triggers>
@@ -87,7 +87,7 @@
                     <Path Name="Glyph" Width="16" Height="16" Fill="{DynamicResource EnvironmentCommandBarCheckBox}"  FlowDirection="LeftToRight" StrokeThickness="1" Data="{StaticResource Checkmark}"/>
                 </Border>
                 <ContentPresenter Grid.Column="2" ContentSource="Header" VerticalAlignment="Center" Margin="{TemplateBinding MenuItem.Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                <TextBlock Grid.Column="4" VerticalAlignment="Center" Text="{TemplateBinding MenuItem.InputGestureText}" Margin="{TemplateBinding MenuItem.Padding}" Visibility="Collapsed"/>
+                <TextBlock Grid.Column="4" VerticalAlignment="Center" TextAlignment="Right" Text="{TemplateBinding MenuItem.InputGestureText}" Margin="{TemplateBinding MenuItem.Padding}" Visibility="Collapsed"/>
                 <Viewbox Grid.Column="4" HorizontalAlignment="Right" Margin="0,0,7,0" Width="10 " Height="10" VerticalAlignment="Center" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:System="clr-namespace:System;assembly=mscorlib">
                     <Rectangle Width="10 " Height="10">
                         <Rectangle.Resources>
